# IBL-ephys-data

./: .gitignore  README.md  convert_ibl_processed_to_csv.py  downloader.py  pyproject.toml  visualize.py
data/: re_eids.csv
data/reproducible_ephys/: ibl_reproducible_ephys_pids.csv
output/: ibl_channel_data.csv
output/ibl/reproducible_ephys/: channels.csv
output/ibl/reproducible_ephys/allen_equivalent/: channels.csv
