[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibl-ephys-data"
version = "0.1.0"
description = "Tools for downloading and visualizing IBL ephys data"
requires-python = ">=3.10"
dependencies = [
    "ONE-api",
    "ibllib",
    "iblatlas",
    "pandas",
    "numpy",
    "brainrender",
]
